--- a/windows/all.html
+++ b/windows/all.html
@@ -1,4 +1,16 @@
 <h2>Настройка</h2>
+<h2>Времени</h2>
+<p>кароч для синхрона юзать это:</p>
+<ul>
+<li>server 0.ru.pool.ntp.org</li>
+<li>server 1.ru.pool.ntp.org</li>
+<li>server 2.ru.pool.ntp.org</li>
+<li>server 3.ru.pool.ntp.org</li>
+</ul>
+<p>Список серверов пула NTP приведен на следующих веб-сайтах:</p>
+<p>http://support.ntp.org/bin/view/Servers/NTPPoolServers</p>
+<p>http://www.pool.ntp.org/ru/</p>
+
 <h3>Изменение языка ввода на экране приветствия Windows 7</h3>
 <ol>
 	<li><kbd>Панель управления</kbd> &rarr; <kbd>Часы, язык и регион</kbd> &rarr; <kbd>Изменить язык интерфейса</kbd> &rarr; <kbd>Язык и клавиатуры</kbd> &rarr; <kbd>Изменить клавиатуру</kbd> &rarr; <kbd>Язык ввода по умолчанию</kbd> (выбираем желаемый язык по умолчанию)</li>
