--- a/jstree/test/test.html
+++ b/jstree/test/test.html
@@ -8,12 +8,20 @@
 	<body>
 		<div class="ui fluid container">
 			<div class="ui grid">
-				<div class="eight wide column">
-					<div id="struct_left"></div>
+				<div class="eight wide column panel_left">
+					<div class="ui button load_tree" data-tree_id="data">data</div>
+					<div class="ui button load_tree" data-tree_id="data2">data2</div>
+					<div class="ui button load_tree" data-tree_id="data3">data3</div>
+					<div class="ui button load_tree" data-tree_id="data4">data4</div>
+					<div id="panel_left">
+						<div id="struct_left"></div>
+					</div>
 					<div class="ui button" id="save_left">Сохранить</div>
 				</div>
 				<div class="eight wide column">
-					<div id="struct_right"></div>
+					<div id="panel_right">
+						<div id="struct_right"></div>
+					</div>
 					<div class="ui button" id="save_right">Сохранить</div>
 				</div>
 			</div>
