--- a/js/array/array.html
+++ b/js/array/array.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p>Привет, Мир!</p>
 		<p ondblclick="eval(this.innerHTML)">alert('hi')</p>
+		<script src="../_lib/lib.js"></script>
 		<script src="array.js"></script>
 	</body>
 </html>
