--- a/rails/all.html
+++ b/rails/all.html
@@ -1,5 +1,7 @@
 <h2>rails - фреймворк ruby</h2>
 
+<p><code>flatrack start -p4001</code> - гем flatrack (отдельный фрейворк для статичных сайтов)</p>
+
 <h3>Приложение</h3>
 <p><code class="copyToClipboard">rails new testApp</code> - создание нового приложения.</p>
 <p><code class="copyToClipboard">rails s</code> - запуск приложения.</p>
