--- a/ruby/all.html
+++ b/ruby/all.html
@@ -4,10 +4,11 @@
 <p>из гит репозитория <a href="https://github.com/rbenv/rbenv">https://github.com/rbenv/rbenv</a></p>
 <p>так же установить плагин для rbenv для установки версий <a href="https://github.com/rbenv/ruby-build">https://github.com/rbenv/ruby-build</a></p>
 <h3>Установка ruby через rbenv</h3>
-<p><code class="copyToClipboard">rbenv install -l</code> - список доступных для установки версий</p>
-<p><code class="copyToClipboard">rbenv install 2.3.1</code></p>
-<p><code class="copyToClipboard">rbenv versions</code> - список установленных версий</p>
-<p><code class="copyToClipboard">rbenv local 2.3.1</code> - назначить версию для текущего проекта</p>
+<p><code class="copyToClipboard">rbenv install -l</code> — список доступных для установки версий;</p>
+<p><code class="copyToClipboard">rbenv install 2.3.1</code> — установить указанную версию;</p>
+<p><code class="copyToClipboard">rbenv versions</code> — список установленных версий;</p>
+<p><code class="copyToClipboard">rbenv local 2.3.1</code> — назначить версию для текущего проекта;</p>
+<p><code class="copyToClipboard">rbenv global 2.4.1</code> — назначить глобальную версию.</p>
 
 <h2>gem - менеджер пакетов ruby</h2>
 <p><code class="copyToClipboard">gem list</code></p>
