--- a/ruby/all.html
+++ b/ruby/all.html
@@ -11,7 +11,9 @@
 <p><code class="copyToClipboard">rbenv global 2.4.1</code> — назначить глобальную версию.</p>
 
 <h2>gem - менеджер пакетов ruby</h2>
-<p><code class="copyToClipboard">gem list</code></p>
+<p><code class="copyToClipboard">gem list</code> — список установленных гемов с версиями;</p>
+<p><code class="copyToClipboard">gem which gem_name</code> — где же гем gem_name;</p>
+<p><code class="copyToClipboard">gem environment</code> — инфа обо всей гем среде (верия руби, рубигема, пути и т.д.);</p>
 <p><code class="copyToClipboard">gem list ^rails$ --remote --all</code> — посмотреть доступные версии пакета</p>
 <p><code class="copyToClipboard">gem install bundler</code></p>
 <p><code class="copyToClipboard">gem install rails</code></p>
